--- a/linechart/style/visual.less
+++ b/linechart/style/visual.less
@@ -1,3 +1,4 @@
+// @import (less) "node_modules/powerbi-visuals-utils-interactivityutils/lib/index.css";
 p {
     font-size: 20px;
     font-weight: bold;
